# RedditArchiver

./: .gitattributes  .gitignore  CONFIG.md  Dockerfile  Dockerfile.nginx  Dockerfile.redditarchiver  README.md  compose.yml  config.yml.example  docker-entrypoint.sh  nginx.conf  pyproject.toml  redditarchiver.service
dev/icons/: config.json  demo.html
dev/icons/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
dev/icons/font/: fontello.eot
github/: example.html
src/: app.py  auth.py  config-docker.yml.example  config.py  config.yml.example  downloader.py  models.py  redditarchiver.service  requirements.txt  run.sh  utils.py
src/reddit_archiver/: controllers.py  models.py  utils.py  wsgi.py
src/reddit_archiver/templates/: main_authenticated.html  request.html
src/static/style/: main.css
src/templates/: main_unauthenticated.html  request_error.html
